[runner] doc container engine url, deps